--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version = "4.11.0"}
+interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version = "4.11.0"}
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
